# the-plumbob-library

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
core/: Cargo.toml
core/migrations/: 0001_initial.sql  0002_seed_categories.sql  0003_package_resources.sql  0004_troubleshoot.sql  0005_profiles.sql  0006_profile_sets.sql  0007_curse.sql  0008_categories.sql  0009_name_radar.sql  0010_cas_subcategory.sql  0011_clear_wrong_subcats.sql  0012_third_wipe.sql  0013_reference_wipe.sql  0014_creators.sql  0015_distribution.sql  0016_merge_sessions.sql
core/src/: casp.rs  creators.rs  curse.rs  dbpf.rs  duplicates.rs  hashing.rs  lib.rs  ops.rs  paths.rs  product.rs  scan.rs  titles.rs  troubleshoot.rs
core/src/db/: catalog.rs  curse.rs  dupes.rs  files.rs  mod.rs  ops.rs  packages.rs  profiles.rs  settings.rs  troubleshoot.rs
docs/: ARCHITECTURE.md  DATA_MODEL.md  DESIGN_SPEC.md  DEVELOPMENT.md  FEATURE_STATUS.md  PATCH_CENTER.md  PROFILES.md  RESEARCH.md  ROADMAP.md  SAFETY_MODEL.md  TROUBLESHOOTER.md
fixtures/: generate_demo_library.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  curse_api.rs  game.rs  main.rs  service.rs  state.rs
src/components/: Pagination.tsx  QuarantineDialog.tsx  Sidebar.tsx  ui.tsx
src/lib/: commands.ts  events.ts  format.ts  product.ts  tauri.ts  types.ts
src/screens/: Activity.tsx  Backups.tsx  BrowserNotice.tsx  Conflicts.tsx  Creators.tsx  Dashboard.tsx  Duplicates.tsx  Library.tsx  Onboarding.tsx  PatchCenter.tsx  Profiles.tsx  Quarantine.tsx  Settings.tsx  Troubleshoot.tsx
src/state/: AppContext.tsx
src/styles/: tokens.css
